# warmvector.rs

./: .gitignore  Cargo.toml  README.md  WasmPackPlugin.js  package.json  vercel.json  webpack.config.js
.github/workflows/: deploy.yml
js/: index.js
public/: index.html
scripts/: vercel-build.sh
src/: ai.rs  app.rs  core_ext.rs  entity.rs  level.rs  lib.rs  main.rs  player.rs  players.rs  projectile.rs  ui.rs
